[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-trism-index"
version = "1.0.0"
description = "AI Trust, Risk, and Security Management (AI TRiSM) market index — vendor database, market data, and regulatory tracker"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Alpha One Index", email = "alpha.one.hq@proton.me" }
]
keywords = [
  "AI TRiSM",
  "AI governance",
  "AI security",
  "responsible AI",
  "EU AI Act",
  "NIST AI RMF",
  "LLM security",
  "model monitoring",
  "AI red teaming",
  "market intelligence",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Security",
]
requires-python = ">=3.9"
dependencies = []  # stdlib only — no runtime dependencies

[project.urls]
Homepage = "https://alpha-one-index.github.io/ai-trism-index/"
Repository = "https://github.com/alpha-one-index/ai-trism-index"
"Bug Tracker" = "https://github.com/alpha-one-index/ai-trism-index/issues"
Documentation = "https://github.com/alpha-one-index/ai-trism-index#readme"

[project.scripts]
ai-trism-fetch = "scripts.fetch_vendors:main"
ai-trism-validate = "scripts.validate_data:main"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
target-version = "py39"
line-length = 100
select = ["E", "F", "W", "B", "I", "N"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["scripts"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
